hw5_lab8/tests/errors/sem_arith_string.kt
// EXPECT: semantic error — * on String operands
fun main() {
    val r = "a" * "b"
}
